mongodb/builddb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: builddb
  name: builddb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: builddb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mongodb-app-network: "true"
        io.kompose.service: builddb
    spec:
      containers:
        - image: builddb
          name: builddb
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
