mongodb/mapapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mapapp
  name: mapapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mapapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mongodb-app-network: "true"
        io.kompose.service: mapapp
    spec:
      containers:
        - image: mapapp
          name: mapapp
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
